entity_macros/tests/ui/derive/ent/missing-ent-attr-in-strict-mode.stderr
error: Missing ent(...) attribute
 --> $DIR/missing-ent-attr-in-strict-mode.rs:6:5
  |
6 |     id: Id,
  |     ^^
